--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 dependencies {
     compile 'com.jfoenix:jfoenix:0.0.0-SNAPSHOT'
     compile 'org.javafxdata:datafx-flow:8.0b5'
-    compile 'de.jensd:fontawesomefx:8.0.10'
+    compile 'de.jensd:fontawesomefx-materialicons:2.2.0'
 }
 
 mainClassName = "Main"
